fixed modal not showing up

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -362,3 +362,7 @@ ul.inline > li {
 g.drawing{
     cursor: crosshair;
 }
+
+.modal {
+    display:block;
+}
